--- a/unizin-parent/unizin-search/src/main/resources/skin/resources/css/main.scss
+++ b/unizin-parent/unizin-search/src/main/resources/skin/resources/css/main.scss
@@ -18,8 +18,10 @@ header,
 navigation,
 aside,
 footer,
+ul,
 li,
 p,
+fieldset,
 textarea,
 input,
 span,
